[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/explosion.png" type="Texture" id=1]
[ext_resource path="res://addons/godot-rollback-netcode/NetworkTimer.gd" type="Script" id=2]
[ext_resource path="res://Explosion.gd" type="Script" id=3]
[ext_resource path="res://addons/godot-rollback-netcode/NetworkAnimationPlayer.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Explode"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Explosion" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -9 )
texture = ExtResource( 1 )
hframes = 9

[node name="DespawnTimer" type="Node" parent="."]
script = ExtResource( 2 )
wait_ticks = 14

[node name="NetworkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Explode = SubResource( 1 )
anims/RESET = SubResource( 2 )
script = ExtResource( 4 )

[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
